More edits. This is the version Im sending Kate.

--- a/supplementary-material/supplementaryText.tex
+++ b/supplementary-material/supplementaryText.tex
@@ -14,7 +14,7 @@
 \renewcommand\thefigure{S\arabic{figure}} 
 \renewcommand\thetable{S\arabic{table}}       
 
-\setcounter{tocdepth}{1}
+%\setcounter{tocdepth}{2}
 
 %\linenumbers
 %\doublespacing
@@ -43,6 +43,11 @@
 \maketitle
 
 \tableofcontents
+\section{Supplementary Text}
+\subsection{Introduction}
+This supplementary text derives all the models used in the paper. For continuity, the gas model derivation is included here as well as in the main text. The derivation of all models is included in the Python script S2. 
+
+
 
 
 \input{/home/tim/Dropbox/liz-paper/lucasMoorcroftManuscript/supplementary-material/REM-methods.tex}
