--- a/supplementary-material/REM-methods.tex
+++ b/supplementary-material/REM-methods.tex
@@ -1,5 +1,5 @@
 
-
+\begin{comment}
 \begin{figure}[t]
 \centering
 \includegraphics[width=0.6\textwidth]{/home/tim/Dropbox/PhD/Analysis/REM-chapter/imgs/equalRegions.pdf}
@@ -7,8 +7,10 @@
 \label{f:equalRegions}
 \end{figure}
 
+\end{comment}
+
 \begin{comment}
-\section{Contents}
+\subsection{Contents}
 \begin{itemize}
         \item \ref{gas}: {\bf Gas model}
         \item \ref{p311}: {\bf  p311}
@@ -54,10 +56,10 @@
 
 \end{comment}
 
-Figure \ref{f:equalRegions} shows the different regions with the upper right being the gas model as derived above and p141 being the model from \citep{rowcliffe2008estimating}. Parameter space is broadly split into three rows ($\alpha \le \pi, \pi \le \alpha < 2\pi$ and $\alpha = 2\pi$) and four columns $(\theta \le \pi/2,  \pi/2 \le \theta \le \pi,  \pi \le \theta < 2\pi$ and $\theta = 2\pi$.) Rows and columns define cells. The equation for $p$ in each region is denoted by three numbers referring to rows, columns and region within that cell (see Fig.~\ref{f:equalRegions}).
+%Figure \ref{f:equalRegions} shows the different regions with the upper right being the gas model as derived above and p141 being the model from \citep{rowcliffe2008estimating}. Parameter space is broadly split into three rows ($\alpha \le \pi, \pi \le \alpha < 2\pi$ and $\alpha = 2\pi$) and four columns $(\theta \le \pi/2,  \pi/2 \le \theta \le \pi,  \pi \le \theta < 2\pi$ and $\theta = 2\pi$.) Rows and columns define cells. The equation for $p$ in each region is denoted by three numbers referring to rows, columns and region within that cell (see Fig.~\ref{f:equalRegions}).
 
 
-\section{Gas model} \label{gas}
+\subsection{Gas model} \label{gas}
 
 We assume that animals are in an homogeneous environment, and move in straight lines of random direction with velocity $v$. We allow that our sensor can detect animals at a distance $r$ and that if an animal moves within this detection region they are detected with a probability of 1, independent of distance from the sensor while animals outside the region are never detected.
 
@@ -120,13 +122,13 @@ For different values of $\theta$ and $\alpha$, the only thing that changes is th
 
 
 
-\section{p311} \label{p311}
+\subsection{Model p311} \label{p311}
 
 p311 is very similar to the gas model except that as $\alpha \le \pi$ the profile width is no longer $2r$ but is instead limited by the width of the animal call. We therefore get a profile width of $2r\sin(\alpha/2)$ instead (see Fig~\ref{f:callExplained}).
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p311.tex}
 
-\section{p22} \label{p22}
+\subsection{Model p22} \label{p22}
 
 For regions with profiles that are more complex than a circle we need to explicitly write functions for the width of the profile for every approach angle. We then use these functions to find the average profile width for all approach angles by integrating across all $2\pi$ angles of approach and dividing by $2\pi$. 
 
@@ -143,7 +145,7 @@ These models have up to five regions. 1) The profile width starts, from $x_1=\fr
 5) Finally, common to all three models, at $x_1 = 2\pi - \theta/2$ the profile becomes a full $2r$ once again.
 
 
-\subsection{p221} \label{p221}
+\subsubsection{Model p221} \label{p221}
 
 Model p221 exists within the area bounded by $\alpha\le2\pi$, $\theta\le2\pi$ and $\alpha \ge 3\pi - \theta$. It has four regions; it does not include the $r$ profile at $x_1=\pi$. Furthermore, $\theta$ is wide enough that the $r + r\cos(x_1 + \theta/2)$ profile starts at $\pi$. This then gives us
 
@@ -169,25 +171,25 @@ Model p221 exists within the area bounded by $\alpha\le2\pi$, $\theta\le2\pi$ an
         \begin{subfigure}[t]{0.3\textwidth}
                 \centering
                 \begin{tikzpicture}[scale=0.38]
-                \fullOne{60}{360}{0};
+                \fullOne{100}{200}{170}
                 \end{tikzpicture}
                 \caption{Directional Call}
                 \label{f:callExplained}
         \end{subfigure}
-\caption{A) Shows the area referred to as the `blind spot'. B) For directional calls, with $\alpha<\pi$, the width of the profile can be limited by the call angle or by the detector region. Here, p311 is shown. Although the detector region is a full circle, the call angle $\alpha = \pi/3$. The detector width is shown in blue, while the call width is shown as a red rectangle. Only where the two overlap, giving a purple area, can an animal be detected.  }
+\caption{A) Shows the area referred to as the `blind spot'. B) For directional calls, with $\alpha<\pi$, the width of the profile can be limited by the call angle or by the detector region.  The detector width is shown in blue, while the call width is shown as a red rectangle. Only where the two overlap, giving a purple area, can an animal be detected. Here we would say the right side of the profile is limited by the sensor, while the left side of the profile is limited by the call angle. The terms in equations would reflect this by containing $\alpha$ if call limited and containing $\theta$ if detector limited.  }
 \label{f:p22}
 \end{figure}
 
 
 
 
-\subsection{p222} \label{p222}
+\subsubsection{Model p222} \label{p222}
 
 Model p222 is bounded by $\alpha \le 3\pi - \theta$, $\alpha \ge 4\pi - 2\theta$ and $\alpha \ge \pi$. It is the same as p221 except that the third profile starts at $5\pi/2 - \theta/2 - \alpha/2$ instead of at $\pi$ which is reflected in the different bounds in the second and third integral.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p222.tex}
 
-\subsection{p223} \label{p223}
+\subsubsection{Model p223} \label{p223}
 
 Model p223 is bound by $\alpha \le 4\pi - 2\theta$, $\alpha \ge \pi$ and $\theta \ge \pi$. It is the same as p222 except that it contains the extra profile with width $r$ (third integral).
 
@@ -237,7 +239,7 @@ Model p223 is bound by $\alpha \le 4\pi - 2\theta$, $\alpha \ge \pi$ and $\theta
 \end{figure}
 
 
-\section{p32} \label{p32}
+\subsection{Model p32} \label{p32}
 
 Cell p32 contains three regions that differ in ways reminiscent of the models in p22. There are four possible profile widths. 1) As $\alpha$ is less than $\pi$ the profile is smaller than $2r$, even when the sensor width is a full diameter. When this is the case, the profile width is instead $2r\sin(\alpha/2$. 2) Similar to p22, at a certain point the blind spot of the sensor area limits the profile width (see Fig.~\ref{f:p32AT}). This gives a profile width of $r\sin(\alpha/2) + r\cos(x_1 - \theta/2)$. 3) Also similar to p22, there can be a point where the right side of the profile is 0 giving a profile width of $r\sin(\alpha/2)$. 4) If $\alpha \le 2\pi - \theta$, then at $\theta/2 + \pi/2 + \alpha/2 $ the profile width become 0 (see Fig.~\ref{f:p32Last}). This inequality distinguishes between p322 and p323. The profile $r\sin(\alpha/2)$ starts at $\theta/2 + \pi/2$ while at $5\pi/2 - \alpha/2 - \theta/2$ the profile returns to size $2r\sin(\alpha/2)$. If $\theta/2 + \pi/2 \ge 5\pi/2 - \alpha/2 - \theta/2$ we go straight into the  $2r\sin(\alpha/2)$ profile and miss the $r\sin(\alpha/2)$ profile.  p321 and p322 are seperated by this inequality which simplifies to $\alpha \le 4\pi - 2\theta$. 
 
@@ -266,19 +268,19 @@ Cell p32 contains three regions that differ in ways reminiscent of the models in
 \label{f:p32}
 \end{figure}
 
-\subsection{p321} \label{p321}
+\subsubsection{Model p321} \label{p321}
 
 p321 is bounded by $\alpha \ge 4\pi - 2\theta$, $\alpha \le \pi$ and $\theta \le 2\pi$. As $\alpha \ge 4\pi - 2\theta$, there is no $r\sin(\alpha/2)$ profile. As $\alpha \le 4\pi - 2\theta$, the profile returns to $2r\sin(\alpha/2)$ rather than going to 0.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p321.tex}
 
-\subsection{p322} \label{p322}
+\subsubsection{Model p322} \label{p322}
 
 p322 is bounded by $4\pi - 2\theta \le \alpha \le 4\pi - 2\theta$ and $\alpha \le \pi$. Therefore there is a $r\sin(\alpha/2)$ profile but no $0r$ profile.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p322.tex}
 
-\subsection{p323} \label{p323}
+\subsubsection{Model p323} \label{p323}
 
 Finally p323 is bounded by  $\alpha \le 4\pi - 2\theta $, $\alpha\le\pi$ and $\theta \le \pi$. It is the same as p322 except that the profile becomes $2r$ rather than returning to $2r\sin(\alpha/2)$.
 
@@ -309,7 +311,7 @@ Finally p323 is bounded by  $\alpha \le 4\pi - 2\theta $, $\alpha\le\pi$ and $\t
 \label{f:p131}
 \end{figure}
 
-\section{p131} \label{p131}
+\subsection{Model p131} \label{p131}
 
 p131 is the first model with $\theta < \pi$. Whereas previously the focal angle has always been $x_1$, we now use different focal angles. $x_2$ and $x_3$ correspond to $\gamma_1$ and $\gamma_2$ in \cite{rowcliffe2008estimating} while $x_4$ is new. They are described in Fig.~\ref{f:xis}. 
 
@@ -317,7 +319,7 @@ There are five different profiles in p131. 1) $x_2$ has an interval of $[\pi/2, 
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p131.tex}
 
-\section{p23} \label{p23}
+\subsection{Model p23} \label{p23}
 
 The models in cell p23 have the five potential profiles in p131 but not all profiles occur in each model, and the angle at which transitions occur are different. Furthermore, there is one extra profile possible. When approaching the sensor from behind, there is a period where the profile is $r$ wide as in p131. At some point the right side of the profile becomes viable again. If this occurs in the $x_4$ region, the profile width becomes  $r - r\cos(x_4)$ as in p131. However, as $\alpha$ is now less than $2\pi$, the right side of the profile might not be viable until we are in the second $x_2$ region. In this case, when we first enter the second $x_2$ region, the profile has a width of $r\cos(x_2 - \theta/2)$. This occurs only if $\alpha \le 3\pi - 2\theta$. This is inequality is found by noting that the right side of the profile become viable at $x_4 = 3\pi/2 - \alpha$ but the $x_2$ region starts at $x_4 = \theta$. The new profile in $x_2$ will only occur if  $ \theta < 3\pi/2 - \alpha/2$ which is rearranged to find the inequality above. This defines the boundary between p231 and p232.
 
@@ -343,7 +345,7 @@ As $\alpha \le 2\pi$ it is possible that when the angle of approach is from dire
 \end{figure}
 
 
-\subsection{p231} \label{p231}
+\subsubsection{Model p231} \label{p231}
 
 p231 is bounded by $\alpha \ge 3\pi - 2\theta$, $\alpha \le 2\pi$ and $\theta\le\pi$.
 
@@ -352,7 +354,7 @@ p231 has all five profiles as found in p131. However, the change from the $r$ pr
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p231.tex}
 
 
-\subsection{p232} \label{p232}
+\subsubsection{Model p232} \label{p232}
 
 p232 is bounded by $\alpha \le 3\pi - 2\theta$, $\alpha\ge 2\pi-\theta$ and $\theta\le\pi$.
 
@@ -360,13 +362,13 @@ p232 does not have the fourth integral from p231 as the right side of the profil
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p232.tex}
 
-\subsection{p233} \label{p233}
+\subsubsection{Model p233} \label{p233}
 
 Finally, p233 is bounded by $\alpha\le \pi$, $\theta\ge \pi/2$ and $\alpha \le 3\pi - 2\theta$. p233 is the same as p232 except that the final profile width is zero and this profile is reached at $\alpha/2+\theta/2-\pi/2$. 
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p233.tex}
 
-\section{p33} \label{p33}
+\subsection{Model p33} \label{p33}
  
 The models in p33 are described with the two focal angles used in models p23, $x_2$ and $x_4$. As $\alpha \le\pi$ an animal can never be detected if it is approaching the detector from behind. This makes these models simpler in that they go through the $x_2$ and $x_4$ eons only once each. 
 
@@ -377,7 +379,7 @@ There are five potential profile sizes. At the beginning of $x_2$, with an appro
 
 In the $x_4$ region the left side of the profile is always $r\sin(\alpha /2)$ while the right side is either 4) 0, giving a profile of $r\sin(\alpha /2)$, or 5) limited by the sensor giving a profile of size $r\sin (\alpha /2) -r\cos(x_4-\theta) $.
 
-\subsection{p331} \label{p331}
+\subsubsection{Model p331} \label{p331}
 
 p331 is bounded by $\alpha \ge \theta$, $\alpha \le\pi$ and $\theta \le \pi$.
 
@@ -387,7 +389,7 @@ As we enter the $x_4$ region, the profile remains limited by the call on the lef
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p331.tex}
 
-\subsection{p332} \label{p332}
+\subsubsection{Model p332} \label{p332}
 
 p332 is bounded by $\theta \ge \pi/2$, $\alpha \le \theta$ and $\alpha \ge 2\theta -\pi$.
 
@@ -397,7 +399,7 @@ p332 is largely similar to p331. However, as $\alpha \le \theta$ the first profi
 
 
 
-\subsection{p333} \label{p333}
+\subsubsection{Model p333} \label{p333}
 
 p333 is bounded by $\alpha \le 2\theta -\pi$ and $\theta \le \pi$.
 
@@ -405,7 +407,7 @@ p333 is similar to p332 except that the profile does not become limited by senso
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p333.tex}
 
-\section{p141} \label{p141}
+\subsection{Model p141} \label{p141}
 
 p141 is the model from \citep{rowcliffe2008estimating}. It has $\alpha =2\pi$ and $\theta \le \pi/2$. It has three profile widths, two of which are repeated, once as the animal approaches from on front of the sensor and once as the animal approaches from behind the sensor.
 
@@ -413,7 +415,7 @@ Starting with an approach direction of directly towards the sensor, and examinin
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p141.tex}
 
-\section{p24} \label{p24}
+\subsection{Model p24} \label{p24}
 
 In the models in p24, the sensor has $\theta \le pi/2$ as in p141. As $\alpha \ge \pi/2$ a lot of the profiles are similar to p141. Specifically, the first three profiles are always the same as the first three profiles of p141. This is because when an animal is moving towards the sensor, the $\alpha \ge \pi$ call is no different to a $2\pi$ call. However, when approaching the sensor from behind, things are slightly different. The animal can only be detected by the sensor if it's call is wide enough that it can be detected once it has passed the sensor. 
 
@@ -424,7 +426,7 @@ As the focal angle moves from $x_3$ to $x_2$  at $x_3=\theta$, we can see that i
 During this second $x_2$ profile the call angle needed for animals to be detected to the left of the detector is increasing while the angle needed for animals to be detected to the right of the detector is decreasing. Therefore, either the left side becomes undetectable, making both sides undetectable (this occurs if $\alpha \le 2\pi - \theta$ as in p242) or the right becomes detectable (if $\alpha \ge 2\pi - \theta$ as in p241), making both sides detectable and giving a profile width of $2r\sin(x_2)\sin(\theta/2)$.
 
 
-\subsection{p241} \label{p241}
+\subsubsection{Model p241} \label{p241}
 
 p241 is bounded by $\alpha \ge 2\pi - \theta$, $\alpha \le 2\pi$ and $\theta \le \pi/2$.
 
@@ -432,7 +434,7 @@ It is the same as p141 except that it includes the extra profile in $x_2$ (the f
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p241.tex}
 
-\subsection{p242} \label{p242}
+\subsubsection{Model p242} \label{p242}
 
 p242 is bounded by $\alpha \le 2\pi - \theta$, $\alpha \ge 2\pi + 2\theta$ and $\theta \le \pi/2$
 
@@ -442,7 +444,7 @@ p242 is the same p241 except that as $\alpha \le 2\pi - \theta$, animals that ap
 
 
 
-\subsection{p243} \label{p243}
+\subsubsection{Model p243} \label{p243}
 
 p243 is bounded by $\alpha \ge 2\pi + 2\theta$, $\alpha \ge \pi$ and $\theta \ge 0$.
 
@@ -454,7 +456,7 @@ It is similar to p242 but doesn't include the last integral as during the $x_3$ 
 
 
 
-\section{p34} \label{p34}
+\subsection{Model p34} \label{p34}
 
 Cell p34 is split into six models rather than three like most of the other cells. As $\alpha < \pi$, animals approaching the sensor from behind can never be detected, so unlike p141, the second $x_2$ and $x_3$ profiles are always zero. The six models are split by three inequalities that relate to the models as follows.
 
@@ -464,47 +466,48 @@ Models with $\alpha \le \theta$ are limited by $\alpha$ in the first, $x_2$ regi
 
 Finally, models with $\alpha \le 2\theta$ have a second profile in $x_2$ where to one side of the sensor $\alpha$ is the limiting factor of profile width, while on the other side $\theta$. This gives a width of $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$. This profile doesn't occur in models with $\alpha \ge 2\theta$.
 
-\subsection{p341} \label{p341}
+\subsubsection{Model p341} \label{p341}
 
 p341 is bounded by $\alpha \le \theta$, $\alpha \ge \pi - 2\theta$ and $\theta \le \pi/2$. Therefore it does contain a $x_4$ profile, starts with an $\alpha$ limited profile and does contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p341.tex}
 
-\subsection{p342} \label{p342}
+\subsubsection{Model p342} \label{p342}
 
 p342 is the only model with a tetrahedral bounding region. It is bounded by $\alpha \ge \theta$, $\alpha \ge \pi - 2\theta$, $\alpha \le 2\theta$ and $\theta \le \pi/2$. Therefore it does contain a $x_4$ profile, but starts with a $\theta$ limited profile. It does contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p342.tex}
 
-\subsection{p343} \label{p343}
+\subsubsection{Model p343} \label{p343}
 
 p343 is bounded by $\alpha \ge \pi - 2\theta$,  $\alpha \ge 2\theta$ and $\alpha \le \pi$. It starts with a $\theta$ limeted profile and has a $x_4$ profile. However, it does not contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p343.tex}
 
 
-\subsection{p344} \label{p344}
+\subsubsection{Model p344} \label{p344}
 
 p344 is bounded by $\alpha \le \pi - 2\theta$, $\alpha \le \theta$ and $\alpha < 0$. Therefore it does not contain a $x_4$ profile. It starts with an $\alpha$ limited profile and contains the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$.
 
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p344.tex}
 
-\subsection{p345} \label{p345}
+\subsubsection{Model p345} \label{p345}
 
 p345 is bounded by $\alpha \le \pi - 2\theta$, $\alpha \ge \theta$ and $alpha \le 2\theta$. It starts with a $\theta$ limited profile. It does contain the $r\sin(\alpha/2) - r\cos(x_2 + \theta/2)$ profile in $x_2$ but does not have a $x_4$ profile.
 
 \input{/home/tim/Dropbox/PhD/Analysis/REM-chapter/latexFiles/p345.tex}
 
+\begin{comment}
 \begin{figure}[t]
 \centering
 \includegraphics[width=1\textwidth]{/home/tim/Dropbox/PhD/Analysis/REM-chapter/imgs/equalModelResults.pdf}
 \caption[REM model solutions]{The results of the models grouped so that all the regions with equal results are presented only once.}
 \label{f:equalModelResults}
 \end{figure}
+\end{comment}
 
-
-\subsection{p346} \label{p346}
+\subsubsection{Model p346} \label{p346}
 
 Finally, p346, the last model, is bounded by y $\alpha \le \pi - 2\theta$, $alpha \ge 2\theta$ and $\theta \ge 0$. Therefore it starts with a $\theta$ limited profile. However it doesn't contain the extra $x_2$ profile nor a $x_4$ profile.
 
