Update to simulation results

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -313,7 +313,7 @@ Although more thorough checks are performed in S3, it can be seen that all adjac
 
 \subsection{Simulation results}
 
-A hundred simulations were completed for each of the model derivations, with a density of   \SI{70}{\animals\per\kilo\meter\squared}, for \SI{150}{\day} of simulated time, straight-line movement at a speed of \SI{40}{\kilo\meter\per\day} and a sensor with \SI{100}{\meter} radius. None of the estimated densities produced showed significant deviation from the true density in the simulation, Figure~\ref{f:ModelBias}. The precision of the models do differ, the standard deviation of the error is strongly related to the angles of the call and the width of the sensor, Figure~\ref{f:StandardDevaition}, such that larger widths have greater precision.
+A hundred simulations were completed for each of the model derivations, with a density of   \SI{70}{\animals\per\kilo\meter\squared}, for \SI{150}{\day} of simulated time, straight-line movement at a speed of \SI{40}{\kilo\meter\per\day} and a sensor with \SI{100}{\meter} radius. None of the estimated densities produced showed significant deviation from the true density in the simulation, Figure~\ref{f:ModelBias}. The precision of the models do differ, the standard deviation of the error is strongly related to the angles of the call and the width of the sensor, Figure~\ref{f:StandardDevaition}, such that larger widths have greater precision. Even the models with small call widths and sensor apertures have an acceptable level of precision based on an acceptable range of five percent error. 
 
 \begin{figure}
 	\centering
