Updated subsample graphs

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -368,7 +368,7 @@ The density of the population also affects the precision of the estimates with t
         \centering
         \begin{subfigure}[t]{0.5\textwidth}
                 \centering
-		\includegraphics[width=1\textwidth]{imgs/ResultsDistance.pdf}
+		\includegraphics[width=1\textwidth]{imgs/ResultsDistanceSubsample.pdf}
                 \caption{Distance}
                 \label{f:Distance}
         \end{subfigure}
