More small changes to wording

--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -280,13 +280,13 @@ The simulated world consists of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter
 
 The animals move with a simple movement model, characterised by a random continuous displacement for each discrete time step. The directional change at the end each step can be randomly picked from a uniform distribution with a given maximum amplitude, with the basic simulation has no directional change between steps. The simulation lasts for $N$ steps of length $T$ during which the animals move with an average constant speed, $v$. The distance travelled in each time step, $d$, is a random distance picked from Normal distribution with mean distance, $\mu_d = vT$,  and standard deviation of $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds.
 
-The simulation of movement outputs the details of each individual capture events, including the angle of front of the animal to the sensor, from which the number of capture event can be calculated for different call widths. The total number of capture events are summed and the analytical model applied to the results in order to estimate the density in the simulation. From this the difference between the true, and estimated, densities can be used to evaluate the bias in the analytical models. If the analytical models are correct the mean difference between the two values should converge to zero as sample size increases. 
+The simulation of movement outputs the details of each individual capture events, including the angle of front of the animal to the sensor, from which the number of capture event can be calculated for different call widths. The total number of capture events are summed and the analytical model applied to the results in order to estimate the density in the simulation. From this the difference between the true and estimated densities can be used to evaluate the bias in the analytical models. If the analytical models are correct the mean difference between the two values should converge to zero as sample size increases. 
 
 In order to assess the precision of the analytical models for different sampling conditions and animal behaviours, the results of the movement simulation have been subsampled, and rerun with different movement parameters. To reduce computation effort, simulations at a maximum density then subsampled to achieve lower densities,  similarly the average distance travelled by the animal in the during the survey period. From the gas model it is possible to see that an appropriate length of the survey is closely linked with the average speed of the animal, \ref{e:gas}, rather than looking at the two variables separately they can be studied together as the average distance moved by the animal within the duration of the survey. Additional simulations were also run for more complex movement models, such as, correlated random walks, and where a proportion of time is spend stationary. Further simulations were also run to identify the sensitivity of the sensor to changes in the radius.
 
-Four models, p141 (REM model), p343, p221, and p322, have been selected to demonstrate how the precision and accuracy varying with model inputs. Such as average distance travelled per animal during the survey time, density of the animal, sensor radius, tortuosity of movement, and proportion of time spent stationary. 
+To be able to produce guidelines for best practise we need to identify the point where the standard deviation of the percentage error falls below an acceptable value. We have chosen this point to be the standard deviation less than five, in real terms this can be equated to saying that at this point if you were to same the same area multiple times approximately 95\% of the density estimates would be within $\pm10\%$ of the true density, assuming normality. 
 
-To be able to produce guidelines for best practise we need to identify the point where the standard deviation of the percentage error falls below an acceptable value. We have chosen this point to be the standard deviation less than five, in real terms this can be equated to saying that at this point if you were to same the same area multiple times 95\% of the density estimates would be within $\pm10\%$ of the true density. 
+Four models, p141 (REM model), p343, p221, and p322, have been selected to demonstrate how the precision and accuracy varying with model inputs. These models have been chosen to represent 1 equation from each quadrant, however the overall trend in accuracy and precision for all models should be similar.
 
 
 \section{Results}
@@ -313,7 +313,7 @@ Although more thorough checks are performed in S3, it can be seen that all adjac
 
 \subsection{Simulation results}
 
-A hundred simulations were completed for each of the model derivations, with a density of   \SI{70}{\animals\per\kilo\meter\squared}, for \SI{150}{\day} of simulated time, straight-line movement at a speed of \SI{40}{\kilo\meter\per\day} and a sensor with \SI{100}{\meter} radius. None of the estimated densities produced showed significant deviation from the true density in the simulation, Figure~\ref{f:ModelBias}. The precision of the models do differ, the standard deviation of the error is strongly related to the angles of the call and the width of the sensor, Figure~\ref{f:StandardDevaition}, such that larger widths have greater precision. Even the models with small call widths and sensor apertures have an acceptable level of precision based on an acceptable range of five percent error. 
+A hundred simulations were completed for each of the model derivations, with a density of   \SI{70}{\animals\per\kilo\meter\squared}, for \SI{150}{\day} of simulated time, straight-line movement at a speed of \SI{40}{\kilo\meter\per\day} and a sensor with \SI{100}{\meter} radius. None of the estimated densities produced showed significant deviation from the true density in the simulation, Figure~\ref{f:ModelBias}. The precision of the models do differ, the standard deviation of the error is strongly related to the angles of the call and the width of the sensor, Figure~\ref{f:StandardDevaition}, such that larger widths have greater precision. Even the models with small call widths and sensor apertures have an acceptable level of precision. 
 
 \begin{figure}
 	\centering
@@ -358,10 +358,11 @@ A hundred simulations were completed for each of the model derivations, with a d
 \end{figure}
 
 
-The average distance travelled by an animal within the survey has no significant impact on the accuracy of the model, but the precision of the estimator will increase with the distance travelled by the animal, Figure~\ref{f:Distance}. The standard deviation for the error falls below five when the average distance moved per animal is greater than 40km, 55km, 25km and 25km for models p141, p343, p221, and p322 respectively. 
+The average distance travelled by an animal within the survey has no significant impact on the accuracy of the model, but the precision of the estimator will increase with the distance travelled by the animal, Figure~\ref{f:Distance}. The precision of the model falls below the benchmark when the animals on average move less than 40km, 55km, 25km and 25km for models p141, p343, p221, and p322 respectively. 
 
 
 The density of the population also affects the precision of the estimates with the larger population densities being associated with greater precision, however there was no observed affect of the accuracy of the models, Figure~\ref{f:Density}. 
+%The density of the populations becomes a limiting factor for the precision of the model if it falls below %VALUE NOT CALCULATED YET% . 
 
 
 \begin{figure}[t]
